examples/test/testpolicy18761.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18761
  namespace: namespace112
spec:
  podSelector:
    matchLabels:
      key39: value1
      key1: value44
      key49: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key45: value47
      podSelector:
        matchLabels:
          key12: value14
          key2: value27
          key30: value38
